# FaceAttendence_demo

faceAttendence_client/: .gitignore  CMakeLists.txt  conditional_defines.h  imgs.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
faceAttendence_server/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  dbPathDefines.h  faceDbDesign.xlsx  imgs.qrc  main.cpp
faceAttendence_server/dataBase/: seeta.db  server.db
faceAttendence_server/lib/QXlsx/source/: xlsxworkbook.cpp
faceAttendence_server/objs/: faceinfo.cpp  faceinfo.h
faceAttendence_server/subPanels/: dbquerypanel.cpp  dbquerypanel.h  ela_empty_widget.cpp  ela_empty_widget.h  registerpanel.cpp  registerpanel.h  showheadimgpanel.cpp  showheadimgpanel.h
